fix SonarGate codeSmells .