@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -29,7 +28,7 @@ public class GroundCategoryService {
         List<GroundCategory> groundCategories = groundCategoryRepository.findAll();
         return groundCategories.stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public GroundCategoryDTO getByID(Long id) {
@@ -41,23 +40,6 @@ public class GroundCategoryService {
     }
 
 
-//    public GroundCategoryDTO createGroundCategoryDTO(GroundCategoryDTO groundCategoryDTO) {
-//        GroundCategory existingGroundCategory = groundCategoryRepository.findByGroundCategoryName(groundCategoryDTO.getGroundCategory());
-//
-//        if (existingGroundCategory != null) {
-//            System.out.println("ВЛИЗАМЕ В ----------------> IF");
-//            throw new ApiRequestException("Ground Category with name: " + groundCategoryDTO.getGroundCategory() + " already exists");
-//        }
-//
-//        GroundCategory groundCategory = new GroundCategory();
-//        groundCategory.setGroundCategory(groundCategoryDTO.getGroundCategory());
-//        groundCategoryRepository.save(groundCategory);
-//
-//        return groundCategoryDTO;
-////        GroundCategory groundCategory = modelMapper.map(groundCategoryDTO, GroundCategory.class);
-////
-////        return modelMapper.map(groundCategoryRepository.save(groundCategory), GroundCategoryDTO.class);
-//    }
 
     public GroundCategoryDTO createGroundCategoryDTO(GroundCategoryDTO groundCategoryDTO) {
         if (groundCategoryRepository.existsByGroundCategory(groundCategoryDTO.getGroundCategory())) {
@@ -65,7 +47,7 @@ public class GroundCategoryService {
         }
 
         GroundCategory groundCategory = new GroundCategory();
-        groundCategory.setGroundCategory(groundCategoryDTO.getGroundCategory());
+        groundCategory.setGroundCategoryName(groundCategoryDTO.getGroundCategory());
         groundCategoryRepository.save(groundCategory);
 
         return groundCategoryDTO;
@@ -77,7 +59,7 @@ public class GroundCategoryService {
         if (foundGroundCategory.isEmpty()) {
             throw new ApiRequestException("Ground Category Not Found");
         }
-        foundGroundCategory.get().setGroundCategory(groundCategory.getGroundCategory());
+        foundGroundCategory.get().setGroundCategoryName(groundCategory.getGroundCategoryName());
 
         groundCategoryRepository.save(foundGroundCategory.get());
         return toDTO(foundGroundCategory.get());
