@@ -1,11 +1,9 @@
 package com.example.ludogorieSoft.village.services;
 
-import com.example.ludogorieSoft.village.dtos.VillageLandscapeDTO;
 import com.example.ludogorieSoft.village.dtos.VillagePopulationAssertionDTO;
 import com.example.ludogorieSoft.village.exeptions.ApiRequestException;
 import com.example.ludogorieSoft.village.model.PopulatedAssertion;
 import com.example.ludogorieSoft.village.model.Village;
-import com.example.ludogorieSoft.village.model.VillageLandscape;
 import com.example.ludogorieSoft.village.model.VillagePopulationAssertion;
 import com.example.ludogorieSoft.village.repositories.PopulatedAssertionRepository;
 import com.example.ludogorieSoft.village.repositories.VillagePopulationAssertionRepository;
@@ -18,7 +16,8 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 
-import static java.util.stream.Collectors.toList;
+
+
 
 @Service
 @AllArgsConstructor
@@ -36,7 +35,7 @@ public class VillagePopulationAssertionService {
         return villagePopulationAssertions
                 .stream()
                 .map(this::toDTO)
-                .collect(toList());
+                .toList();
     }
 
     public VillagePopulationAssertionDTO createVillagePopulationAssertionDTO (VillagePopulationAssertionDTO villagePopulationAssertionDTO) {
